修改插件加载规则